--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "Node/Express backend powered by mongoDb for a blog website",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon my_file.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "ibrahim",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "ip": "^2.0.0",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.19"
   }
