--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start:prod": "node index.js"
   },
   "author": "ibrahim",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "ip": "^2.0.0",
-    "mongoose": "^6.4.6",
+    "mongoose": "^6.4.6"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
