--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "ip": "^2.0.0",
-    "mongoose": "^6.4.6"
+    "mongoose": "^6.4.6",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
